--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 					      <muleVersion>4.3.0</muleVersion>
 					      <username>${username}</username>
 					      <password>${password}</password>
-					      <applicationName>github_action_demo</applicationName>
+					      <applicationName>github-action-demo</applicationName>
 					      <environment>Sandbox</environment>
 					      <region>us-east-2</region>
 					      <workers>1</workers>
